[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/SnakeHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://Alimento/Alimento.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/Main.gd" type="Script" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.47451, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alimento" parent="." instance=ExtResource( 2 )]

[node name="SnakeHead" parent="." instance=ExtResource( 1 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="StartPosition" type="Position2D" parent="."]
[connection signal="eat" from="Alimento" to="." method="_on_Alimento_eat"]
[connection signal="eat" from="Alimento" to="SnakeHead" method="_on_Alimento_eat"]
[connection signal="hit" from="SnakeHead" to="." method="gameover"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
